--- a/carrito/public/css/estilos.css
+++ b/carrito/public/css/estilos.css
@@ -131,3 +131,9 @@ h1 {
 .box2 .formBox {
     margin: 30px 0 15px 0;
 }
+
+.box2 .formBox form {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
