--- a/carrito/templates/base.html.twig
+++ b/carrito/templates/base.html.twig
@@ -4,7 +4,7 @@
         
         <link href="{{ asset('css/estilos.css') }}" rel="stylesheet">
         <meta charset="UTF-8">
-        <title>{% block title %}Inicio!{% endblock %}</title>
+        <title>{% block title %}Magia developer ❤️{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         
         {% block stylesheets %}
@@ -13,16 +13,8 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body>
-        <header>
-            <h2>Carrito de compras</h2>
+   
         
-            <div>
-                <button><b>Ver orden</b></button>
-                <button><b>Salir</b></button>
-            </div>
-        
-        </header>
         {% block body %}{% endblock %}
-    </body>
+    
 </html>
