--- a/carrito/templates/base.html.twig
+++ b/carrito/templates/base.html.twig
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        
-        <link href="{{ asset('css/estilos.css') }}" rel="stylesheet">
-        <meta charset="UTF-8">
-        <title>{% block title %}Magia developer ❤️{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        
-        {% block stylesheets %}
-        {% endblock %}
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-   
-        
-        {% block body %}{% endblock %}
-    
+  <head>
+    <link href="{{ asset('css/estilos.css') }}" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <title>{% block title %}Magia developer ❤️{% endblock %}</title>
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"
+    />
+
+    {% block stylesheets %} {% endblock %} {% block javascripts %} {% block
+    importmap %}{{
+      importmap("app")
+    }}{% endblock %} {% endblock %}
+  </head>
+
+  <body>
+    {% block body %}{% endblock %}
+    {% for type, messages in app.flashes %}
+        <div class="alert alert-{{ type }}">
+            {% for message in messages %}
+                <p class="flashProducto">{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endfor %}
+  </body>
 </html>
